--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,18 @@
     <header style="text-align: center;">
         <h1>Welcome to the Winter Wonderland</h1>
     </header>
+    
+    <div class="hills">
+        <div class="hill hill-1">
+            <div class="trees-container"></div>
+        </div>
+        <div class="hill hill-2">
+            <div class="trees-container"></div>
+        </div>
+        <div class="hill hill-3"></div>
+        <div class="hill hill-4"></div>
+    </div>
+
     <main>
         <section class="celebration" style="text-align: center;">
             <h2>Celebrate the Season!</h2>
@@ -69,6 +81,15 @@
                 <div class="light light-4"></div>
                 <div class="light light-5"></div>
                 <div class="trunk"></div>
+            </div>
+            <div class="string-lights"></div>
+            <div class="side-lights"></div>
+            <div class="decorative-lights">
+                <div class="light-string top"></div>
+                <div class="light-string left"></div>
+                <div class="light-string right"></div>
+                <div class="light-string diagonal-1"></div>
+                <div class="light-string diagonal-2"></div>
             </div>
         </div>
     
